Replace advisor image from image.jpg to image.png

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <div class="glass-panel">
     
     <div class="advisor-profile" id="profile-area">
-        <img src="./image.jpg" alt="占い師の顔写真" class="advisor-photo">
+        <img src="./image.png" alt="占い師の顔写真" class="advisor-photo">
         <div class="advisor-info">
             <div class="advisor-role">監修・運命鑑定士</div>
             <div class="advisor-name">星導 ルミナ (Lumina)</div>
