--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             width: 110px; height: 110px; border-radius: 50%; object-fit: cover;
             border: 2px solid var(--gold); padding: 4px; margin-bottom: 15px;
             box-shadow: 0 0 20px rgba(226,192,125,0.3); transition: 0.5s ease-in-out;
+            background: rgba(0,0,0,0.4); /* 画像読み込み前の背景色 */
         }
         .advisor-role { font-size: 12px; color: var(--text-sub); margin-bottom: 4px; letter-spacing: 2px;}
         .advisor-name { font-size: 18px; color: var(--gold-light); font-weight: bold; margin-bottom: 10px; letter-spacing: 1px;}
@@ -185,7 +186,7 @@
 <div class="glass-panel">
     
     <div class="advisor-profile" id="profile-area">
-        <img id="advPhoto" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=250&auto=format&fit=crop" alt="占い師" class="advisor-photo">
+        <img id="advPhoto" src="image.png" alt="占い師" class="advisor-photo">
         <div class="advisor-info">
             <div class="advisor-role" id="advRole">監修・運命鑑定士</div>
             <div class="advisor-name" id="advName">星導 ルミナ (Lumina)</div>
@@ -302,16 +303,17 @@
     // --- 🔮 占い師のデータ ---
     const advisors = {
         daily: {
+            // ★今日の運勢用の写真ファイル名
             photo: "image.png", 
             role: "監修・運命鑑定士",
-            name: "川添 三鬼 (Mikity)",
+            name: "星導 ルミナ (Lumina)",
             bio: "代々続く星読みの家系に生まれ、西洋占星術とカバラ数秘術を統合。あなたの魂に刻まれた過去・現在・未来の記録を読み解き、運命を好転させる具体的な道標を提示します。"
         },
         destiny: {
-            /* ★「運命の相手・占い」用の占い師写真。好きな画像URLに変更可能です */
-            photo: "image.png2", 
+            // ★運命の相手用の写真ファイル名
+            photo: "image2.png", 
             role: "霊視・縁結び鑑定士",
-            name: "迫口 劉氏 (RyuShi",
+            name: "天霧 結祈 (Yuki Amagiri)",
             bio: "幼少期より他者の「ご縁の糸」が視える特異体質を持つ。現在パートナーがいる方でも、魂レベルでの『本当の運命の相手（ツインレイ）』を正確に特定し、偽りのない真実をお伝えします。"
         }
     };
@@ -456,7 +458,7 @@
         setTimeout(() => {
             document.getElementById("loading").style.display = "none";
             callback();
-        }, 3000); // 重厚感を出すため3秒待機
+        }, 3000); 
     }
 
     function resetApp() {
