--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <div style="font-size: 30px; margin-bottom: 10px;">🔒</div>
                     <div style="color:var(--accent-love); font-size: 18px; font-weight: bold; margin-bottom: 10px;">ここから先はプレミアム鑑定</div>
                     <div style="font-size: 13px; color: var(--text-sub); margin-bottom: 20px; line-height: 1.6;">運命の相手の「容姿」や「裏の顔」、二人が交差する「具体的な時期と前兆」の完全な啓示を解放します。</div>
-                    <a href="javascript:void(0);" onclick="unlockPremium('destiny')" class="paywall-btn">1,500円で完全版を視る</a>
+                    <a href="https://buy.stripe.com/test_6oU5kC86TgYJ4Ly1tUgjC00">1,500円で完全版を視る</a>
                     <div style="font-size: 11px; color: #888; margin-top: 10px;">※デモ決済画面へ進みます</div>
                 </div>
             </div>
@@ -441,7 +441,7 @@
                     <div style="font-size: 30px; margin-bottom: 10px;">🔒</div>
                     <div style="color:var(--accent-palm); font-size: 18px; font-weight: bold; margin-bottom: 10px;">ここから先はプレミアム解析</div>
                     <div style="font-size: 13px; color: var(--text-sub); margin-bottom: 20px; line-height: 1.6;">あなたの人生が激変する「今後の未来」と<br>「恋愛運・仕事運」の詳細データを完全公開します。</div>
-                    <a href="javascript:void(0);" onclick="unlockPremium('palm')" class="paywall-btn">800円で未来をアンロック</a>
+                    <a href="https://buy.stripe.com/test_6oU5kC86TgYJ4Ly1tUgjC00">500円で未来をアンロック</a>
                     <div style="font-size: 11px; color: #888; margin-top: 10px;">※デモ決済画面へ進みます</div>
                 </div>
             </div>
@@ -482,7 +482,7 @@
                     <div style="font-size: 30px; margin-bottom: 10px;">🔒</div>
                     <div style="color:var(--accent-tarot); font-size: 18px; font-weight: bold; margin-bottom: 10px;">ここから先は特別個別鑑定</div>
                     <div style="font-size: 13px; color: var(--text-sub); margin-bottom: 20px; line-height: 1.6;">引かれたカードから導かれる「最終的な未来」、そしてあなたの悩みに対する「完全なる個別アンサー」を解放します。</div>
-                    <a href="javascript:void(0);" onclick="unlockPremium('tarot')" class="paywall-btn">1,000円で神託を受け取る</a>
+                    <a href="https://buy.stripe.com/test_6oU5kC86TgYJ4Ly1tUgjC00">1,000円で神託を受け取る</a>
                     <div style="font-size: 11px; color: #888; margin-top: 10px;">※デモ決済画面へ進みます</div>
                 </div>
             </div>
