--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
     let generatedVerifyCode = "";
     
     // 【重要】本物のメールを飛ばすための「EmailJS」の設定項目
-    const EMAILJS_SERVICE_ID = "service_xxxxxxx"; // ← ★【必須】ご自身のService IDをここに入力してください！
+    const EMAILJS_SERVICE_ID = "service_m6oqaw9"; // ← ★【必須】ご自身のService IDをここに入力してください！
     const EMAILJS_TEMPLATE_ID = "template_n59vwqm";
     const EMAILJS_PUBLIC_KEY = "H3a49IOLHGqZpyl7q";
     
