--- a/index.html
+++ b/index.html
@@ -591,8 +591,8 @@
     let generatedVerifyCode = "";
     
     // 【重要】本物のメールを飛ばすための「EmailJS」の設定項目
-    const EMAILJS_SERVICE_ID = "YOUR_SERVICE_ID"; 
-    const EMAILJS_TEMPLATE_ID = "YOUR_TEMPLATE_ID";
+    const EMAILJS_SERVICE_ID = "service_m6oqaw9"; 
+    const EMAILJS_TEMPLATE_ID = "template_n59vwqm";
     const EMAILJS_PUBLIC_KEY = "H3a49IOLHGqZpyl7q";
 
     // 🛡️ アカウントロック用設定 (要件1対応)
